Update docker-compose.yml areeglado

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3'
- 
+
 services:
   sonarqube:
     image: sonarqube:latest
@@ -27,11 +27,25 @@ services:
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
-      
+
+  jenkins:
+    image: jenkins/jenkins:lts
+    ports:
+      - "8080:8080"
+    networks:
+      - sonarnet
+    volumes:
+      - jenkins_home:/var/jenkins_home
+
+  ssh-agent:
+    image: jenkins/ssh-agent
+    networks:
+      - sonarnet
+
 networks:
   sonarnet:
     driver: bridge
- 
+
 volumes:
   sonarqube_conf:
   sonarqube_data:
@@ -39,15 +53,4 @@ volumes:
   sonarqube_bundled-plugins:
   postgresql:
   postgresql_data:
-
-
-  jenkins:
-    image: jenkins/jenkins:lts
-    ports:
-      - "8080:8080"
-    volumes:
-      - jenkins_home:/var/jenkins_home
-  ssh-agent:
-    image: jenkins/ssh-agent
-volumes:
   jenkins_home:
