cambiamos tipos de servicios en deployment

--- a/docker/deployment.yaml
+++ b/docker/deployment.yaml
@@ -34,13 +34,14 @@ kind: Service
 metadata:
   name: appx-api-service
 spec:
-  type: LoadBalancer  # Mantener como LoadBalancer
+  type: NodePort  # Mantener como LoadBalancer
   selector:
     app: appx-api
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 8080
+      targetPort: 8080 
+      nodePort: 30008
 ---
 apiVersion: apps/v1
 kind: Deployment
